@@ -35,6 +35,7 @@ struct item {
     struct item *next;
     u_int32_t serial;
     struct uo_packet_world_item packet_world_item;
+    struct uo_packet_equip packet_equip;
 };
 
 struct mobile {
@@ -137,6 +138,9 @@ void connection_broadcast_servers_except(struct connection *c,
 
 void connection_world_item(struct connection *c,
                            const struct uo_packet_world_item *p);
+
+void connection_equip_item(struct connection *c,
+                           const struct uo_packet_equip *p);
 
 void connection_remove_item(struct connection *c, u_int32_t serial);
 
