@@ -149,6 +149,17 @@ static packet_action_t handle_walk_ack(struct connection *c,
     return PA_DROP;
 }
 
+static packet_action_t handle_equip(struct connection *c,
+                                    void *data, size_t length) {
+    struct uo_packet_equip *p = data;
+
+    assert(length == sizeof(*p));
+
+    connection_equip(c, p);
+
+    return PA_ACCEPT;
+}
+
 static packet_action_t handle_personal_light_level(struct connection *c,
                                                    void *data, size_t length) {
     struct uo_packet_personal_light_level *p = data;
@@ -525,6 +536,9 @@ struct packet_binding server_packet_bindings[] = {
     },
     { .cmd = PCK_WalkAck, /* 0x22 */
       .handler = handle_walk_ack,
+    },
+    { .cmd = PCK_Equip, /* 0x2e */
+      .handler = handle_equip,
     },
     { .cmd = PCK_PersonalLightLevel, /* 0x4e */
       .handler = handle_personal_light_level,
